--- a/index.html
+++ b/index.html
@@ -7,8 +7,192 @@
 	<meta name="description" content="">
 	<title></title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+	<link rel="stylesheet" href="./assets/css/slick.css">
+	<link rel="stylesheet" href="./assets/css/ress.css">
+	<link rel="stylesheet" href="./assets/css/style.min.css">
 </head>
 <body>
 
+	<!-- header -->
+	<header class="header" id="header">
+		<div class="gen-inner">
+			<nav>
+				<ul>
+					<li><a href="">HOME</a></li>
+					<li><a href="">MENU</a></li>
+					<li><a href="">GALLERY</a></li>
+					<li><a href="">NEWS</a></li>
+					<li><a href="">LOCATION</a></li>
+					<li><a class="inpage-link--sns" href="">SNS</a></li>
+				</ul>
+			</nav>
+			<div class="hamburger">
+				<div class="hamburger-line first"></div>
+				<div class="hamburger-line second"></div>
+				<div class="hamburger-line third"></div>
+			</div>
+		</div>
+	</header>
+	<!-- /header -->
+
+	<!-- mv -->
+	<div class="mv">
+		<div class="mv__slick">
+			<ul class="slick-slider">
+				<li><img src="./assets/img/mv1.jpg" alt=""></li>
+				<li><img src="./assets/img/mv2.jpg" alt=""></li>
+				<li><img src="./assets/img/mv3.jpg" alt=""></li>
+			</ul>
+		</div>
+		<div class="logo">
+			<img src="./assets/img/logo2.png" alt="">
+		</div>
+	</div>
+	<!-- /mv -->
+
+	<!-- main -->
+	<main>
+		
+		<!-- news -->
+		<section id="news" class="news">
+			<div class="gen-inner">
+				<div class="section__title">
+					<h2><img src="./assets/img/news.png" alt="NEWS"></h2>
+				</div>
+				<div class="section__content">
+					<div class="news__wrap">
+						<div class="news-board--img"></div>
+						<div class="news-paper--img"></div>
+						<div class="news__list">
+
+							<dl class="news__item">
+								<dt class="date"></dt>
+								<dd class="cat">お知らせ</dd>
+								<dd class="detail">お知らせ内容</dd>
+							</dl>
+							<dl class="news__item">
+								<dt class="date">2021/10/31</dt>
+								<dd class="cat">お知らせ</dd>
+								<dd class="detail">お知らせ内容</dd>
+							</dl>
+							<dl class="news__item">
+								<dt class="date">2021/10/31</dt>>
+								<dd class="cat">お知らせ</dd>
+								<dd class="detail">お知らせ内容</dd>
+							</dl>
+							<dl class="news__item">
+								<dt class="date">2021/10/31</dt>
+								<dd class="cat">お知らせ</dd>
+								<dd class="detail">お知らせ内容</dd>
+							</dl>
+							<dl class="news__item">
+								<dt class="date">2021/10/31</dt>
+								<dd class="cat">お知らせ</dd>
+								<dd class="detail">お知らせ内容</dd>
+							</dl>
+
+						</div>
+					</div>
+					<div class="btn">
+						<a href=""><img src="./assets/img/btn.png" alt="MORE"></a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- /news -->
+
+		<!-- concept -->
+		<section id="concept" class="concept">
+			<div class="gen-inner">
+				<div class="section__title">
+					<h2><img src="./assets/img/concept.png" alt="CONCEPT"></h2>
+				</div>
+				<div class="section__content">
+					<div class="concept__wrap">
+						<div class="concept__heading">
+							<h3>知多牛×アメリカン</h3>
+						</div>
+						<div class="concept__text">
+							<p>
+								ここにコンセプトが入ります。ここにコンセプトが入ります。ここにコンセプトが入ります。
+								ここにコンセプトが入ります。ここにコンセプトが入ります。ここにコンセプトが入ります。
+								ここにコンセプトが入ります。
+								ここにコンセプトが入ります。ここにコンセプトが入ります。ここにコンセプトが入ります。ここにコンセプトが入ります。
+								ここにコンセプトが入ります。ここにコンセプトが入ります。ここにコンセプトが入ります。
+								ここにコンセプトが入ります。ここにコンセプトが入ります。
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- /concept -->
+
+		<!-- menu -->
+		<section id="menu" class="menu">
+			<div class="gen-inner">
+				<div class="section__title">
+					<h2><img src="./assets/img/menu.png" alt="MENU"></h2>
+				</div>
+				<div class="section__content">
+					<div class="menu__wrap">
+						<a class="menu__link" href="">
+							<div class="img-box menu-img">
+								<img src="./assets/img/burger.png" alt="">
+							</div>
+							<p>FOOD</p>
+						</a>
+						<a class="menu__link" href="">
+							<div class="img-box menu-img">
+								<img src="./assets/img/drink.png" alt="">
+							</div>
+							<p>DRINK</p>
+						</a>
+						<div class="img-box tac">
+							<img src="./assets/img/paper.png" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- /menu -->
+
+		<!-- gallery -->
+		<section id="gallery" class="gallery">
+			<div class="gen-inner">
+				<div class="section__title">
+					<h2><img src="./assets/img/gallery.png" alt="GALLERY"></h2>
+				</div>
+				<div class="section__content">
+					<a href="" class="btn">
+						<img src="./assets/img/btn.png" alt="MORE">
+					</a>
+				</div>
+			</div>
+		</section>
+		<!-- /gallery -->
+
+		<!-- gallery -->
+		<section id="sns" class="sns">
+			<div class="gen-inner">
+				<div class="section__title">
+					<h2><img src="./assets/img/sns.png" alt="SNS"></h2>
+				</div>
+				<div class="section__content">
+					<a href="">
+						<img src="./assets/img/line-banner.png" alt="">
+					</a>
+				</div>
+			</div>
+		</section>
+		<!-- /gallery -->
+
+	</main>
+	<!-- /main -->
+
+	<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+	integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+	<script src="./assets/js/slick.min.js"></script>
+	<script src="./assets/js/bundle.js"></script>
 </body>
 </html>
