--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<title></title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 	<link rel="stylesheet" href="./assets/css/slick.css">
 	<link rel="stylesheet" href="./assets/css/ress.css">
@@ -16,7 +19,7 @@
 	<!-- header -->
 	<header class="header" id="header">
 		<div class="gen-inner">
-			<nav>
+			<nav class="header__menu">
 				<ul>
 					<li><a href="">HOME</a></li>
 					<li><a href="">MENU</a></li>
@@ -65,36 +68,38 @@
 						<div class="news-paper--img"></div>
 						<div class="news__list">
 
+							<a href="">
+								<dl class="news__item">
+									<dt class="date">2021/10/31</dt>
+									<dd class="cat">NEWS</dd>
+									<dd class="detail">お知らせ内容</dd>
+								</dl>
+							</a>
 							<dl class="news__item">
-								<dt class="date"></dt>
-								<dd class="cat">お知らせ</dd>
+								<dt class="date">2021/10/31</dt>
+								<dd class="cat">NEWS</dd>
 								<dd class="detail">お知らせ内容</dd>
 							</dl>
 							<dl class="news__item">
 								<dt class="date">2021/10/31</dt>
-								<dd class="cat">お知らせ</dd>
-								<dd class="detail">お知らせ内容</dd>
-							</dl>
-							<dl class="news__item">
-								<dt class="date">2021/10/31</dt>>
-								<dd class="cat">お知らせ</dd>
+								<dd class="cat">NEWS</dd>
 								<dd class="detail">お知らせ内容</dd>
 							</dl>
 							<dl class="news__item">
 								<dt class="date">2021/10/31</dt>
-								<dd class="cat">お知らせ</dd>
+								<dd class="cat">NEWS</dd>
 								<dd class="detail">お知らせ内容</dd>
 							</dl>
 							<dl class="news__item">
 								<dt class="date">2021/10/31</dt>
-								<dd class="cat">お知らせ</dd>
+								<dd class="cat">NEWS</dd>
 								<dd class="detail">お知らせ内容</dd>
 							</dl>
 
 						</div>
 					</div>
-					<div class="btn">
-						<a href=""><img src="./assets/img/btn.png" alt="MORE"></a>
+					<div class="btn-wrap">
+						<a class="btn" href=""><img src="./assets/img/btn.png" alt="MORE"></a>
 					</div>
 				</div>
 			</div>
@@ -136,18 +141,22 @@
 				</div>
 				<div class="section__content">
 					<div class="menu__wrap">
-						<a class="menu__link" href="">
-							<div class="img-box menu-img">
+						<div class="menu__link__wrap">
+							<a class="menu__link menu__link--food" href="">
+								<p>FOOD</p>
+							</a>
+							<div class="img-box menu__img">
 								<img src="./assets/img/burger.png" alt="">
 							</div>
-							<p>FOOD</p>
-						</a>
-						<a class="menu__link" href="">
-							<div class="img-box menu-img">
+						</div>
+						<div class="menu__link__wrap">
+							<a class="menu__link menu__link--drink" href="">
+								<p>DRINK</p>
+							</a>
+							<div class="img-box menu__img">
 								<img src="./assets/img/drink.png" alt="">
 							</div>
-							<p>DRINK</p>
-						</a>
+						</div>
 						<div class="img-box tac">
 							<img src="./assets/img/paper.png" alt="">
 						</div>
@@ -164,31 +173,112 @@
 					<h2><img src="./assets/img/gallery.png" alt="GALLERY"></h2>
 				</div>
 				<div class="section__content">
-					<a href="" class="btn">
-						<img src="./assets/img/btn.png" alt="MORE">
-					</a>
+					<div class="gallery__wrap">
+						<div class="btn-wrap">
+							<a class="btn" href=""><img src="./assets/img/btn.png" alt="MORE"></a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
 		<!-- /gallery -->
 
-		<!-- gallery -->
+		<!-- sns -->
 		<section id="sns" class="sns">
 			<div class="gen-inner">
 				<div class="section__title">
 					<h2><img src="./assets/img/sns.png" alt="SNS"></h2>
 				</div>
 				<div class="section__content">
-					<a href="">
-						<img src="./assets/img/line-banner.png" alt="">
-					</a>
+					<div class="sns__wrap">
+
+						<div class="sns__line">
+							<a href="">
+								<img src="./assets/img/line-banner.png" alt="ラインお友達登録でお得なクーポン券GET">
+							</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
-		<!-- /gallery -->
+		<!-- /sns -->
+
+		<!-- location -->
+		<section id="location" class="location">
+			<div class="gen-inner">
+				<div class="section__title">
+					<h2><img src="./assets/img/location.png" alt="LOCATION"></h2>
+				</div>
+				<div class="section__content">
+					<div class="location__wrap">
+						<div class="location__map">
+							<iframe
+								src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104396.0474505352!2d136.856271222154!3d35.14723036603699!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6003709e107b2365%3A0x2a9622d4e8ceb352!2z5oSb55-l55yM5ZCN5Y-k5bGL5biC!5e0!3m2!1sja!2sjp!4v1637675064873!5m2!1sja!2sjp"
+								width="540" height="420" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+						</div>
+						<div class="location__data">
+							<div class="logo location__logo">
+								<img src="./assets/img/logo2.png" alt="chitaburger ロゴ">
+							</div>
+							<div class="location__info">
+								<dl>
+									<dt>店名</dt>
+									<dd>CHITA BURGER</dd>
+								</dl>
+								<dl>
+									<dt>電話番号</dt>
+									<dd>000-0000-0000</dd>
+								</dl>
+								<dl>
+									<dt>メールアドレス</dt>
+									<dd>chitaburger@sample.com</dd>
+								</dl>
+								<dl>
+									<dt>代表者名</dt>
+									<dd>岩田隼輝</dd>
+								</dl>
+								<dl>
+									<dt>住所</dt>
+									<dd>愛知県知多郡1-1-1</dd>
+								</dl>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- /location -->
 
 	</main>
 	<!-- /main -->
+
+	<footer>
+		<div class="gen-inner">
+			<div class="footer__content">
+				<div class="logo footer__logo">
+					<img src="./assets/img/logo-white.png" alt="chitaburger ロゴ">
+				</div>
+				<div class="footer__info">
+					<p>愛知県知多郡1-1-1</p>
+					<p>000-0000-0000</p>
+					<p>chitaburger@sample.com</p>
+				</div>
+			</div>
+			<nav class="footer__menu">
+				<ul>
+					<li><a href="">HOME</a></li>
+					<li><a href="">MENU</a></li>
+					<li><a href="">GALLERY</a></li>
+					<li><a href="">NEWS</a></li>
+					<li><a href="">LOCATION</a></li>
+					<li><a class="inpage-link--sns" href="">SNS</a></li>
+				</ul>
+			</nav>
+		</div>
+	</footer>
+	<div class="copyright">
+		<small>©︎CHITA BURGER</small>
+	</div>
 
 	<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
 	integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
